--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,7 @@ source/yaneuraou.js
 source/yaneuraou.data
 source/yaneuraou.wasm
 source/yaneuraou.worker.js
+yaneuraou.js
+yaneuraou.data
+yaneuraou.wasm
+yaneuraou.worker.js
