--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "author": "Yuta Okumura",
   "license": "GPL-3.0",
   "repository": "github:arashigaoka/YaneuraOu.wasm",
-  "homepage": "https://arashigaoka/YaneuraOu.wasm",
+  "homepage": "https://github.com/arashigaoka/YaneuraOu.wasm/",
   "main": "yaneuraou.js",
   "files": [
     "Copying.txt",
     "yaneuraou.js",
     "yaneuraou.wasm",
-    "yaneuraou.worker.js"
+    "yaneuraou.worker.js",
+    "yaneuraou.data"
   ],
   "scripts": {
     "prepare": "cd source && make clean tournament && cd .. && cp source/yaneuraou.js source/yaneuraou.worker.js source/yaneuraou.wasm source/yaneuraou.data ."
