--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "yaneuraou.data"
   ],
   "scripts": {
-    "prepare": "cd source && make clean tournament && cd .. && cp source/yaneuraou.js source/yaneuraou.worker.js source/yaneuraou.wasm source/yaneuraou.data ."
+    "prepare": "cd source && make clean tournament && cd .. && mv source/yaneuraou.js source/yaneuraou.worker.js source/yaneuraou.wasm source/yaneuraou.data ."
   }
 }
