delete node support

--- a/source/Makefile
+++ b/source/Makefile
@@ -152,7 +152,7 @@ else
 
 		CPPFLAGS += -Wno-unused-parameter
 
-	  EMFLAGS += -s MODULARIZE=1 -s EXPORT_NAME="YaneuraOu" -s ENVIRONMENT=web,worker,node -s USE_PTHREADS=1 -s PTHREAD_POOL_SIZE=1 -msimd128
+	  EMFLAGS += -s MODULARIZE=1 -s EXPORT_NAME="YaneuraOu" -s ENVIRONMENT=web,worker -s USE_PTHREADS=1 -s PTHREAD_POOL_SIZE=1 -msimd128
 	  EMFLAGS += -s EXIT_RUNTIME=0 -s "EXTRA_EXPORTED_RUNTIME_METHODS=['ccall']" --pre-js pre.js --preload-file eval/nn.bin
 	  EMFLAGS += -s ALLOW_MEMORY_GROWTH=1 -s INITIAL_MEMORY=71303168 -s MAXIMUM_MEMORY=2147483648
 	  EMFLAGS += -s --closure 1
